force-app/main/default/objects/Fokus_Subscription_Service_Delta__c/Fokus_Subscription_Service_Delta__c.object-meta.xml
<CustomObject>
    <label>Fokus Subscription Service Delta</label>
    <nameField>
        <label>Fokus Subscription Service Delta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fokus Subscription Service Delta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>