force-app/main/default/objects/Fokus_Subscription_Service_Delta__c/fields/FUTURE_CANCELLATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>FUTURE_CANCELLATION_DATE__c</fullName>
    <label>FUTURE_CANCELLATION_DATE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>