force-app/main/default/objects/Fokus_Subscription_Service_Delta__c/fields/LOAD_DATE__c.field-meta.xml
<CustomField>
    <fullName>LOAD_DATE__c</fullName>
    <label>LOAD_DATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>