force-app/main/default/objects/Fokus_Subscription_Service_Delta__c/fields/LOAD_TYPE__c.field-meta.xml
<CustomField>
    <fullName>LOAD_TYPE__c</fullName>
    <label>LOAD_TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>