force-app/main/default/objects/Fokus_Subscription_Service_Delta__c/fields/QUANTITY__c.field-meta.xml
<CustomField>
    <fullName>QUANTITY__c</fullName>
    <defaultValue>1</defaultValue>
    <label>QUANTITY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>