force-app/main/default/objects/Fokus_Subscription_Service_Delta__c/fields/SOC_CHURN_DATE__c.field-meta.xml
<CustomField>
    <fullName>SOC_CHURN_DATE__c</fullName>
    <label>SOC_CHURN_DATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>