force-app/main/default/objects/Fokus_Subscription_Service_Delta__c/fields/VAT_MULTIPLIER__c.field-meta.xml
<CustomField>
    <fullName>VAT_MULTIPLIER__c</fullName>
    <label>VAT_MULTIPLIER</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>