force-app/main/default/objects/Fokus_Subscription_Service_Delta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>INSTANCE_KEY__c</columns>
    <columns>LOAD_TYPE__c</columns>
    <columns>LOAD_DATE__c</columns>
    <columns>SUBSCRIBER_ID__c</columns>
    <columns>SOC__c</columns>
    <columns>SOC_INTAKE_DATE__c</columns>
    <columns>SOC_CHURN_DATE__c</columns>
    <columns>FEATURE_CODE__c</columns>
    <columns>FEATURE_DESC__c</columns>
    <columns>VAT_MULTIPLIER__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>